[package]
name = "fbas_analyzer"
version = "0.2.0"
authors = ["Martin Florian <martin.florian@hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[dependencies]
bit-set = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
quicli = "0.4"
structopt = "0.2"
rand = "0.7"
bzip2 = "0.3.2"

[[bench]]
name = "benchmarks"
harness = false
