[package]
name = "fbas_analyzer"
version = "0.4.3" # remember to also update: readme, html_root_url
authors = ["Martin Florian <martin.florian@hu-berlin.de>"]
description = "Library and tools for analyzing FBASs like the Stellar network"
license = "MIT"
repository = "https://github.com/wiberlin/fbas_analyzer"
readme = "README.md"
keywords = ["stellar", "fbas", "quorum", "analysis", "simulation"]
categories = ["command-line-utilities", "science", "simulation"]
edition = "2018"

[[bin]]
name = "fbas_analyzer"
required-features = ["binaries"]

[[bin]]
name = "bulk_fbas_analyzer"
required-features = ["binaries", "bulk-analyzer"]

[[bin]]
name = "qsc_simulator"
required-features = ["binaries", "qsc-simulation"]

[[bin]]
name = "graph_generator"
required-features = ["binaries", "qsc-simulation"]

[[bin]]
name = "bulk_performance_experiment"
required-features = ["binaries", "bulk-analyzer", "qsc-simulation"]

[features]
default = ["binaries", "bulk-analyzer", "qsc-simulation"]
binaries = ["quicli", "structopt"]
bulk-analyzer = ["csv", "par-map", "sha3", "hex"]
qsc-simulation = ["rand", "bzip2"]

[dev-dependencies]
criterion = "0.3.2"
sha3 = "0.9.1"
hex = "0.4.2"
assert_cmd = "1.0.2"
predicates = "1.0.5"

[dependencies]
bit-set = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pathfinding = "2.0.4"
itertools = "0.9.0"
quicli = { version = "0.4", optional = true }
structopt = {version = "0.2", optional = true }
rand = { version = "0.7", optional = true }
bzip2 = { version = "0.3.2", optional = true }
csv = { version = "1.1.3", optional = true }
par-map = { version = "0.1.4", optional = true }
sha3 = { version = "0.9.1", optional = true }
hex = { version = "0.4.2", optional = true }

[[bench]]
name = "benchmarks"
harness = false
