[package]
name = "fbas_analyzer"
version = "0.6.0" # remember to also update: readme, html_root_url
authors = ["Martin Florian <martin.florian@hu-berlin.de>", "Charmaine Ndolo <charmaine.ndolo@hu-berlin.de>"]
description = "Library and tools for analyzing FBASs like the Stellar network"
license = "MIT"
repository = "https://github.com/wiberlin/fbas_analyzer"
readme = "README.md"
keywords = ["stellar", "fbas", "quorum", "analysis", "simulation"]
categories = ["command-line-utilities", "science", "simulation"]
edition = "2021"

[[bin]]
name = "fbas_analyzer"
required-features = ["binaries"]

[[bin]]
name = "bulk_fbas_analyzer"
required-features = ["binaries", "bulk-analyzer"]

[[bin]]
name = "qsc_simulator"
required-features = ["binaries", "qsc-simulation"]

[[bin]]
name = "graph_generator"
required-features = ["binaries", "qsc-simulation"]

[[bin]]
name = "bulk_performance_experiment"
required-features = ["binaries", "performance-experiment"]

[features]
default = ["binaries", "bulk-analyzer"]
binaries = ["quicli", "structopt"]
bulk-analyzer = ["csv", "par-map", "sha3", "hex"]
qsc-simulation = ["rand", "bzip2"]
performance-experiment = ["bulk-analyzer", "qsc-simulation"]

[dev-dependencies]
criterion = "0.3"
sha3 = "0.9"
hex = "0.4"
assert_cmd = "2.0"
predicates = "2.0"

[dependencies]
bit-set = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11"
log = "0.4"
pathfinding = "2.2"
itertools = "0.10"
quicli = { version = "0.4", optional = true }
structopt = { version = "0.2", optional = true }
rand = { version = "0.8", optional = true }
bzip2 = { version = "0.3", optional = true }
csv = { version = "1.1", optional = true }
par-map = { version = "0.1", optional = true }
sha3 = { version = "0.9", optional = true }
hex = { version = "0.4", optional = true }

[[bench]]
name = "benchmarks"
harness = false
